Don't disable transport action
With this commit we keep the transport action enabled. This is to ensure
operator privileges can be checked in all cases (see
OperatorPrivilegesIT.testEveryActionIsEitherOperatorOnlyOrNonOperator).